k8s/ingress/pgadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: skeleton
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: pgadmin.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: skeleton-app-pgadmin
                port:
                  number: 80
